# kasparro-backend-Omkar-Biradar

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
core/: db.py
data/: products.csv  vendors.csv
ingestion/api_source/: client.py
schemas/: csv_schema.py  models.py  run_models.py  schema_models.py  vendor_schema.py
scripts/: run_etl_loop.py  smoke_test.sh
services/: api_ingestion.py  csv_ingestion.py  data_service.py  rate_limit.py  retry.py  schema_drift.py  stats_service.py  vendor_ingestion.py
tests/: conftest.py  test_data.py  test_etl.py  test_health.py  test_stats.py
